force-app/main/default/objects/Census_Data__c/Census_Data__c.object-meta.xml
<CustomObject>
    <label>Census Data</label>
    <nameField>
        <displayFormat>Census-{00000}</displayFormat>
        <label>Census Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Census Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>