force-app/main/default/objects/Census_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Census Data</relationshipLabel>
    <relationshipName>Census_Data</relationshipName>
    <type>Lookup</type>
</CustomField>