force-app/main/default/objects/Census_Data__c/fields/CBSA__c.field-meta.xml
<CustomField>
    <fullName>CBSA__c</fullName>
    <label>CBSA</label>
    <length>25</length>
    <type>Text</type>
</CustomField>