force-app/main/default/objects/Census_Data__c/fields/Counties_MSA__c.field-meta.xml
<CustomField>
    <fullName>Counties_MSA__c</fullName>
    <label>Counties MSA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>