force-app/main/default/objects/Census_Data__c/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>