force-app/main/default/objects/Census_Data__c/fields/GEOID__c.field-meta.xml
<CustomField>
    <fullName>GEOID__c</fullName>
    <label>GEOID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>