force-app/main/default/objects/Census_Data__c/fields/Median_Income__c.field-meta.xml
<CustomField>
    <fullName>Median_Income__c</fullName>
    <label>Median Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>