force-app/main/default/objects/Census_Data__c/fields/Metro_Name__c.field-meta.xml
<CustomField>
    <fullName>Metro_Name__c</fullName>
    <label>Metro Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>