force-app/main/default/objects/Census_Data__c/fields/Metro_Status__c.field-meta.xml
<CustomField>
    <fullName>Metro_Status__c</fullName>
    <label>Metro Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>