force-app/main/default/objects/Census_Data__c/fields/Small_Area_Status__c.field-meta.xml
<CustomField>
    <fullName>Small_Area_Status__c</fullName>
    <label>Small Area Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>