force-app/main/default/objects/Census_Data__c/fields/Tract__c.field-meta.xml
<CustomField>
    <fullName>Tract__c</fullName>
    <label>Tract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>